# otp-rs

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/engine/: Cargo.toml
crates/engine/examples/: door_to_door.rs
crates/engine/src/: lib.rs
crates/engine/tests/: arrive_by.rs  door_to_door.rs  rail_alternative.rs  synthetic_door_to_door.rs  transfer_walk.rs
crates/engine/tests/fixtures/xfer/: calendar.txt  routes.txt  stop_times.txt  stops.txt  trips.txt
crates/fares/: Cargo.toml
crates/fares/src/: lib.rs
crates/gtfs/: Cargo.toml
crates/gtfs/src/: csv.rs  lib.rs
crates/gtfs/tests/: load_fixture.rs  load_real_data.rs
crates/gtfs/tests/fixtures/mini/: calendar.txt  calendar_dates.txt  fare_attributes.txt  fare_rules.txt  routes.txt  stop_times.txt  stops.txt  trips.txt
crates/raptor/: Cargo.toml
crates/raptor/examples/: plan.rs
crates/raptor/src/: lib.rs
crates/raptor/tests/: multi_feed_smoke.rs  real_data_smoke.rs
crates/server/: Cargo.toml
crates/server/src/: dto.rs  handler.rs  lib.rs  main.rs
crates/street/: Cargo.toml
crates/street/examples/: diagnose_stairs.rs  route.rs
crates/street/src/: lib.rs  osm_xml.rs
crates/street/tests/: real_data_smoke.rs  route_profiles.rs  street_osm.rs
crates/street/tests/fixtures/: profile_routes.osm  tags.osm
scripts/: compare_door2door.sh  compare_otp.sh  extract_osm_xml.sh
