[package]
name = "otp-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "ネイティブ経路サーバ (JVM OTP を置換する高速起動バイナリ)"

[dependencies]
otp-core = { path = "../core" }
otp-engine = { path = "../engine" }
otp-fares = { path = "../fares" }
otp-gtfs = { path = "../gtfs" }
otp-raptor = { path = "../raptor" }
otp-street = { path = "../street" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tiny_http = "0.12.0"
